--- a/src/main/resources/vdr/jonglisto/web/components/ProgramDayEpg.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/ProgramDayEpg.tml
@@ -18,7 +18,7 @@
                     <th class="partCell">${message:part}</th>
                     <th class="genreCell">${message:genre}</th>
                     <th class="categoryCell">${message:category}</th>
-                    <th class="actionCell">${message:action}</th>
+                    <th class="actionCell">${message:action-label}</th>
                 </tr>
 
                 <t:loop source="channelEpg" value="epg">
