--- a/src/main/resources/vdr/jonglisto/web/components/Layout.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/Layout.tml
@@ -41,6 +41,14 @@
                                 </t:any>
                             </t:loop>
                         </ul>
+                        
+                        <div class="navbar-header navbar-brand caright camargt">
+                            <t:zone t:id="mappingConfigZone" id="mappingConfigZone">
+                                <t:form class="form-horizontal" t:id="languageForm">
+                                    <t:select t:id="language" value="language" label="message:language" model="message:select_language" zone="^" validate="required"/>
+                                </t:form>
+                            </t:zone>
+                        </div>
                     </div>
                 </nav>
 
