--- a/src/main/resources/vdr/jonglisto/web/components/ProgramChannelEpg.tml
+++ b/src/main/resources/vdr/jonglisto/web/components/ProgramChannelEpg.tml
@@ -8,6 +8,8 @@
             </tr>
 
             <t:loop source="epgData" value="epg">
+                <t:trigger event="findTimerEpg" />
+
                 <t:if test="dateSwitch">
                     <tr class="longdate">
                         <td colspan="7">
@@ -48,11 +50,22 @@
                     </td>
 
                     <td>
-                        <t:eventlink t:event="showEpg" t:context="[useId,channelName]" zone="^">
-                            <strong>${map:epg['title']}</strong>
-                        </t:eventlink>
-                        <br />
-                        ${map:epg['shorttext']}
+                        <div>
+                            <t:eventlink t:event="showEpg" t:context="[useId,channelName]" zone="^">
+                                <strong>${map:epg['title']}</strong>
+                            </t:eventlink>
+
+                            <div class="caright">
+                                <t:if test="timerEpg">
+                                    <span class="btn btn-success btn-xs">
+                                        ${timerEpg?.method}:${timerEpg?.name}&nbsp;${timerEpg?.remoteId}
+                                    </span>
+                                </t:if>
+                            </div>
+
+                            <br />
+                            ${map:epg['shorttext']}
+                        </div>
                     </td>
 
                     <td>
