start a setup page... not yet finished

--- a/src/main/resources/vdr/jonglisto/web/pages/Setup.tml
+++ b/src/main/resources/vdr/jonglisto/web/pages/Setup.tml
@@ -66,10 +66,10 @@
                             <th></th>
                         </tr>
 
-                        <t:loop source="setup.availableVdr" value="vdr">
+                        <t:loop source="setup.availableVdr" value="vdr" encoder="vdrEncoder">
                             <tr>
                                 <td>
-                                    <t:TextField t:id="name" value="vdr.name" size="20" />
+                                    <t:TextField t:id="name" value="vdr.name" size="20" t:mixins="zoneUpdater" ZoneUpdater.clientEvent="blur" ZoneUpdater.event="aliasNameChanged" ZoneUpdater.zone="setupZone" ZoneUpdater.addConstant="${vdr.name}"/>
                                 </td>
 
                                 <td>
@@ -98,103 +98,69 @@
                     <t:submit value="${message:newVdr}" t:id="newVdr" zone="^" />
                 </fieldset>
 
-                <fieldset class="fieldset-border">
-                    <legend class="legend-border">${message:configviews}</legend>
+                <!-- 
+                <t:zone t:id="viewZone" id="viewZone">
+                -->
+                    <fieldset class="fieldset-border">
+                        <legend class="legend-border">${message:configviews}</legend>
 
-                    <table class="table table-sm table-striped table-bordered">
-                        <tr>
-                            <th>${message:view_name}</th>
-                            <th>${message:view_tv}</th>
-                            <th>${message:view_channels}</th>
-                            <th>${message:view_timers}</th>
-                            <th>${message:view_recordings}</th>
-                            <th></th>
-                        </tr>
-
-                        <t:loop source="setup.availableViews" value="view" index="viewIndex">
+                        <table class="table table-sm table-striped table-bordered">
                             <tr>
-                                <td>
-                                    <t:TextField t:id="viewName" value="view.name" size="20" />
-                                </td>
-
-                                <td>
-                                    <span class="col-sm-36">
-                                        <etc:multiselect t:id="viewHead" blankLabel="Select..." model="vdrNameModel" selected="view.head"
-                                            multiple="false" blankOption="never" />
-                                    </span>
-                                </td>
-
-                                <td>
-                                    <span class="col-sm-36">
-                                        <etc:multiselect t:id="viewChannels" blankLabel="Select..." model="vdrNameModel" selected="view.channels"
-                                            multiple="true" blankOption="never" />
-                                    </span>
-                                </td>
-
-                                <td>
-                                    <span class="col-sm-36">
-                                        <etc:multiselect t:id="viewTimers" blankLabel="Select..." model="vdrNameModel" selected="view.timer"
-                                            multiple="false" blankOption="never" />
-                                    </span>
-                                </td>
-
-                                <td>
-                                    <span class="col-sm-36">
-                                        <etc:multiselect t:id="viewRecordings" blankLabel="Select..." model="vdrNameModel" selected="view.recordings"
-                                            multiple="true" blankOption="never" />
-                                    </span>
-                                </td>
-
-                                <td>
-                                    <t:eventlink t:event="deleteView" class="caright" context="viewIndex" zone="^">${message:delete}</t:eventlink>
-                                </td>
+                                <th>${message:view_name}</th>
+                                <th>${message:view_tv}</th>
+                                <th>${message:view_channels}</th>
+                                <th>${message:view_timers}</th>
+                                <th>${message:view_recordings}</th>
+                                <th></th>
                             </tr>
-                        </t:loop>
-                    </table>
 
-                    <t:submit value="${message:newView}" t:id="newView" zone="^" />
+                            <t:loop source="setup.availableViews" value="view" index="viewIndex" encoder="viewEncoder">
+                                <tr>
+                                    <td>
+                                        <t:TextField t:id="viewName" value="view.name" size="20" />
+                                    </td>
 
-                </fieldset>
+                                    <td>
+                                        <span class="col-sm-36">
+                                            <etc:multiselect t:id="viewHead" blankLabel="Select..." model="vdrNameModel" selected="view.head"
+                                                multiple="false" blankOption="never" />
+                                        </span>
+                                    </td>
 
-                <fieldset class="fieldset-border">
-                    <legend class="legend-border">${message:configvdr}</legend>
-                    
-                    <!-- TODO:
-                      "useRecordingSyncMap" : "false",  
-                      "developer_mode": "false",         
-                      "svdrpPort": "5000",
-                      "remoteOsdSleepTime": "200",
-                      "remoteOsdIncSleepTime": "200",
-                      
-                      "hsqldb": {
-                           "path": "/var/cache/jonglisto-db",
-                           "remote": "true"
-                      }
-                      
-                      "NashornScripts": {  
-                            "svdrp": "/etc/jonglisto/svdrp.js",
-                            "epg2vdr": "/etc/jonglisto/epg2vdr.js"
-                      } 
-                      
-                      VDR Configs:
-                      
-                      "config" : {
-                            "TIMER_AUX" : "<remotetimers>2</remotetimers>",
-                            "TIMER_MINUS_MINUTES" : 10,
-                            "TIMER_PLUS_MINUTES" : 10,
-                            "TIMER_PRIORITY" : 50,
-                            "TIMER_LIFETIME" : 99,
-                            "RECORDING_NAMING_MODE": 1    
-                      }                      
-                    -->
-                    
-                    <div class="form-group row">
-                        <t:label for="coma" class="col-sm-5 col-form-label" />
-                        <div class="col-sm-10">
-                            <t:TextField t:id="coma" value="setup.epgdhost" label="message:epgdhost" size="25" />
-                        </div>
-                    </div>
-                </fieldset>
+                                    <td>
+                                        <span class="col-sm-36">
+                                            <etc:multiselect t:id="viewChannels" blankLabel="Select..." model="vdrNameModel" selected="view.channels"
+                                                multiple="true" blankOption="never" />
+                                        </span>
+                                    </td>
+
+                                    <td>
+                                        <span class="col-sm-36">
+                                            <etc:multiselect t:id="viewTimers" blankLabel="Select..." model="vdrNameModel" selected="view.timer"
+                                                multiple="false" blankOption="never" />
+                                        </span>
+                                    </td>
+
+                                    <td>
+                                        <span class="col-sm-36">
+                                            <etc:multiselect t:id="viewRecordings" blankLabel="Select..." model="vdrNameModel" selected="view.recordings"
+                                                multiple="true" blankOption="never" />
+                                        </span>
+                                    </td>
+
+                                    <td>
+                                        <t:eventlink t:event="deleteView" class="caright" context="viewIndex" zone="^">${message:delete}</t:eventlink>
+                                    </td>
+                                </tr>
+                            </t:loop>
+                        </table>
+
+                        <t:submit value="${message:newView}" t:id="newView" zone="^" />
+                    </fieldset>
+                <!-- 
+                </t:zone>
+                -->
+                <t:submit value="${message:generateConfig}" t:id="generateConfig" />
             </t:if>
         </t:form>
     </t:zone>
